2009.06.01 Kentaro FUKUCHI <fukuchi@megaui.net>
	* tests/prof_qrencode.c:
	  - Error check has been added.
	* tests/common.h:
	  - Bug fixed.

2009.05.30 Kentaro FUKUCHI <fukuchi@megaui.net>
	* configure.ac, libqrencode.pc.in:
	  - New option "--enable-thread-safety" has been added. This option is
	    enabled by default.
	* rscode.c, qrspec.c:
	  - libqrencode has become thread-safe! (probably)
	* tests/common.h:
	  - sprintfBin() removed, printBstream() added.
	* qrinput.[ch], qrencode.[ch], mqrspec.c:
	  - Functions for Micro QR Code encoding have been added.
	* tests/common.h:
	  - Utility functions improved.
	* tests/*.c:
	  - Code cleanups.
	  - Tests for Micro QR Code added.

2009.05.30 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrinput.c:
	  - padlen check was wrong in QRinput_appendPaddingBit().
	* tests/test_qrinput.c:
	  - Stop printing bstream->data.
	  - test_padding2() has been added.

2009.05.21 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c, qrencode_inner.h:
	  - MQRraw_* has been implemented.
	  - Code cleanups. Struct QRRaw_code is slightly changed.
	* tests/test_qrencode.c:
	  - Added new test.

2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Merged from 3.1.0 branch. (rev 2248:HEAD)
	* mqrspec.[ch], tests/create_mqr_frame_pattern.c:
	  - MQRspec_getEccSpec() has been deleted.
	* tests/create_mqr_frame_pattern.c, tests/Makefile.am:
	  - Newly added.
	* mask.[ch], tests/test_mask.c, qrencode_inner.h:
	  - Code cleanups.
	  - Unnecessary memcpy has been eliminated.
	  - New test program has been added.
	* mmask.[ch], qrencode_inner.h, tests/test_mmask.c, Makefile.am, tests/Makefile.am:
	  - Mask module for Micro QR Code has been added.

2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c, qrinput.c, qrencode.c:
	  - Some compile warnings cleared.
	* qrencode.c, tests/test_qrencode.c:
	  - NULL check of an input arg has been added to
	    QRcode_encodeString8bit().
	  - NULL check test and empty string test have been added for